# ai-powered-threat-modeling

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  getting-started.md  stride-methodology.md
examples/: sample-description.txt
examples/output/: README.md  threat-model.json  threat-model.md
src/aitm/: __init__.py  cli.py
src/aitm/core/: __init__.py  config.py  engine.py  llm.py  models.py
src/aitm/export/: __init__.py  json_export.py  markdown_export.py
